// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobsList /> should render 1`] = `
<Fragment>
  <ViewHeader
    title="Jobs"
  >
    <ViewHeader__ViewHeaderTitle>
      Jobs 
      <Badge>
        5
      </Badge>
    </ViewHeader__ViewHeaderTitle>
  </ViewHeader>
  <Connect(JobsToolbar) />
  <ScrollList
    documents={
      Array [
        Object {
          "foo": "bar",
        },
      ]
    }
    onLoadNextPage={[Function]}
    page={2}
    pageCount={3}
    renderRow={[Function]}
  />
</Fragment>
`;

exports[`<JobsList /> should render when [this.props.documents.length=0] 1`] = `
<Fragment>
  <ViewHeader
    title="Jobs"
  >
    <ViewHeader__ViewHeaderTitle>
      Jobs 
      <Badge>
        5
      </Badge>
    </ViewHeader__ViewHeaderTitle>
  </ViewHeader>
  <Connect(JobsToolbar) />
  <NoneFoundBox
    noun="jobs"
  />
  <ScrollList
    documents={Array []}
    onLoadNextPage={[Function]}
    page={2}
    pageCount={3}
    renderRow={[Function]}
  />
</Fragment>
`;

exports[`<JobsList /> should render when [this.props.documents=null] 1`] = `<LoadingPlaceholder />`;
